er section safari fixes 2

--- a/styles.css
+++ b/styles.css
@@ -1999,7 +1999,6 @@ HOME EXTENSION STYLES
 
 .er-row-four-left-image-container{
     display: flex;
-    height: 100%;
     width: 100%;
 }
 
